# curvest

./: .gitignore  CMakeLists.txt  LICENSE.txt  Readme.md
example/: lionhead_small.ply
libcurvest/: KDTree.h  curvest.cc  curvest.h  defines.h  gnuplot_helpers.h  regiongrower.cc  regiongrower.h  sphere.h  utils.cc  utils.h
tools/: curvestimate.cc  densityfield.cc  mesh_colorize.cc
